TaskGetters 테스트 코드 수정
TaskGetters 테스트 코드에서 mockTask를 여러 개로 변경하였습니다. 이를 통해 여러 Task를 반환하는 경우에 대한 테스트를 보다 정확하게 수행할 수 있게 되었습니다.

주요 변경사항:
1. mockTask를 단일 객체에서 리스트로 변경하였습니다.
2. taskRepository.findAll()이 mockTasks를 반환하도록 수정하였습니다.
3. 반환된 tasks가 mockTasks와 동일한지, 그리고 크기가 2인지 확인하는 테스트 코드를 추가하였습니다.